--- a/src/App.css
+++ b/src/App.css
@@ -98,7 +98,7 @@ img {
 }
 
 @media only screen and (max-width: 640px) {
-    #ProfileImage {
+    #ProfileImage, #SocialMediaIconsFooter{
       width: 40%;
     }
     #SocialMediaIcons{
@@ -107,7 +107,7 @@ img {
   }
 
 @media only screen and (max-width: 540px) {
-    #ProfileImage {
+    #ProfileImage, #SocialMediaIconsFooter {
       width: 45%;
     }
     #SocialMediaIcons{
@@ -116,7 +116,7 @@ img {
   }
 
 @media only screen and (max-width: 490px) {
-    #ProfileImage {
+    #ProfileImage, #SocialMediaIconsFooter {
       width: 50%;
     }
     #SocialMediaIcons{
@@ -125,7 +125,7 @@ img {
   }
 
 @media only screen and (max-width: 400px) {
-    #ProfileImage {
+    #ProfileImage, #SocialMediaIconsFooter {
       width: 60%;
     }
     #SocialMediaIcons{
@@ -134,7 +134,7 @@ img {
   }
 
 @media only screen and (max-width: 430px) {
-    #ProfileImage {
+    #ProfileImage, #SocialMediaIconsFooter {
       width: 70%;
     }
     #SocialMediaIcons{
@@ -143,7 +143,7 @@ img {
   }
 
 @media only screen and (max-width: 360px) {
-    #ProfileImage {
+    #ProfileImage, #SocialMediaIconsFooter {
       width: 80%;
     }
     #SocialMediaIcons{
@@ -152,7 +152,7 @@ img {
   }
 
 @media only screen and (max-width: 310px) {
-    #ProfileImage {
+    #ProfileImage, #SocialMediaIconsFooter {
       width: 90%;
     }
     #SocialMediaIcons{
